--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
     <footer class="footer mt-auto py-3">
       <div class="container">
         <span class="navbar-brand">
-          <h5>Itranstion</h5>
+          <h5>All rigths reserved ;p</h5>
         </span>
       </div>
     </footer>
